# audio-player

./: .gitmodules  .woodpecker.yml  CMakeLists.txt  README.md
board/: CMakeLists.txt  version_template.c
board/lpc17xx_devkit/: CMakeLists.txt  halm.config  memory.ld
board/lpc17xx_devkit/application/: board.c  board.h  main.c  memory.c  memory.h  tasks.c  tasks.h
board/lpc17xx_devkit/shared/: board_shared.c  board_shared.h
board/lpc17xx_devkit/tests/blinking_led/: main.c
board/lpc17xx_devkit/tests/load/: main.c
board/lpc43xx_devkit/: CMakeLists.txt  halm.config  memory.ld  memory_nor.ld
board/lpc43xx_devkit/application/: board.c  board.h  main.c  memory.c  memory.h  tasks.c  tasks.h
board/lpc43xx_devkit/shared/: accel.c  board_shared.c  board_shared.h
board/lpc43xx_devkit/tests/blinking_led/: main.c
board/lpc43xx_devkit/tests/load/: main.c
cmake/: GetGitInfo.cmake
core/: CMakeLists.txt  accel.c  accel.h  amplifier.c  amplifier.h  amplifier_defs.h  analog_filter.c  analog_filter.h  dfu_defs.h  interface_proxy.c  interface_proxy.h  partitions.c  partitions.h  player.c  player.h  tlv320aic3x.c  tlv320aic3x.h  tlv320aic3x_defs.h  trace.c  trace.h  version.h  wav_defs.h
